# helen8

./: .gitmodules  CMakeLists.txt  meson.build
h8c/: CMakeLists.txt  meson.build
h8c/grammar/: h8_lexer.l  h8_parser.y
h8c/include/: h8_ast.h  h8_lexer.h
h8c/src/: h8_ast.c  h8_main.c
